# didkit

examples/java-springboot/src/main/java/com/spruceid/didkitexample/auth/: VPAuthenticationProvider.java
examples/java-springboot/src/main/java/com/spruceid/didkitexample/user/: UserService.java
examples/java-springboot/src/main/resources/static/scripts/: chapi.js
examples/java-springboot/src/main/resources/templates/: sign-in.html
examples/svelte-chapi-wallet/src/ui/wallet/: WalletGet.svelte  WalletStore.svelte
lib/: Cargo.toml
lib/src/: c.rs
wasm/: Cargo.toml
wasm/loader/test/: index.test.js
