[package]
name = "didkit-wasm"
version = "0.1.0"
authors = ["Tiago Nascimento <tiago.nascimento@spruceid.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
async-std = "1.8"

[dependencies.didkit]
path = "../lib"
features = ["wasm"]

[dependencies.ssi]
path = "../../ssi"
default-features = false
features = ["ed25519-dalek", "sha2", "rsa", "rand"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["generate", "issue", "verify"]

generate = []
issue = []
verify = []
credential = []
presentation = []
